--- a/assignment-module-2.css
+++ b/assignment-module-2.css
@@ -183,6 +183,7 @@ h1{
 		border: 1px solid #000000;
 		margin:3%;
 		background-color: #aab7bb;
+		width:100%;
 	}
 
 	.col_h1{
@@ -201,6 +202,7 @@ h1{
 		border: 1px solid #000000;
 		margin:3%;
 		background-color: #aab7bb;
+		width:100%;
 
 	}
 
@@ -221,6 +223,7 @@ h1{
 		border: 1px solid #000000;
 		margin:3%;
 		background-color: #aab7bb;
+		width:100%;
 
 	}
 
